--- a/fisco_finanza.html
+++ b/fisco_finanza.html
@@ -125,6 +125,8 @@
           Fisco e finanza</h1></div><br>
           <p class="lead"><strong>Un fisco equo contro rendite, speculazione finanziaria e privilegi</strong>. Il fisco è essenziale per finanziare i servizi pubblici, il problema è garantire equità e progressività. In un contesto in cui la politica fiscale si è mossa in direzioni molto lontane dal dettato costituzionale, Sbilanciamoci! prevede con la sua manovra fiscale di redistribuire il reddito e la ricchezza al fine di diminuire le diseguaglianze sociali. Il complesso delle proposte alimenta le casse dello Stato con circa 24 miliardi di euro, di cui circa 8 finalizzati a ripartire il carico fiscale chiedendo di più a chi ha di più e prelevando di meno da chi ha di meno. Tra i principali interventi – improntati a giustizia economica e progressività dell’imposizione fiscale – vi sono l’introduzione di una “vera” tassa sulle transazioni finanziarie, la rinuncia all’abolizione della Tasi prevista nel Ddl di Stabilità 2016, l’abolizione della cedolare secca sugli affitti a canone libero, il mantenimento della riduzione dell’Ires a partire dal 2017. A questi provvedimenti si accompagna una manovra sulla tassazione Irpef che riduce di 1 punto le aliquote sul I e II scaglione di reddito e aumenta invece l’aliquota dal 41 al 44% sul IV scaglione (da 50.001 a 75.000 euro), dal 43 al 47,5% sul V scaglione (tra i 75.000 e i 100.000 euro) e la porta al 51,5% per i redditi superiori ai 100.000 euro, con corrispondente creazione di un VI scaglione. Si prevede poi l’assoggettamento all’Irpef delle rendite finanziarie e un’imposta complessiva sul patrimonio finanziario di famiglie e imprese con una struttura ad aliquote progressive, che esoneri di fatto dal pagamento i ceti medio-bassi e incida sui grandi patrimoni. Guardando al rilancio della domanda interna e al miglioramento della condizione economico-contributiva dei meno abbienti, si propone infine la riduzione di un punto percentuale dell’aliquota massiva dell’Iva dal 22 al 21% e l’aumento in sede Irpef di 100 euro delle detrazioni sui redditi da lavoro dipendente e da pensioni.          
           </p>
+    
+
           </div>
         </div>
 
@@ -132,7 +134,7 @@
 
 
       <div class="row clearfix">
-        <div class="col-md-12 column">
+        <div class="col-md-12 column finanzatable">
 
           <div ex:role="viewPanel" style="padding: 0in;">
 
@@ -154,7 +156,7 @@
                     <!-- <td><a href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', WIDTH, 400,BGCOLOR,'',BORDERWIDTH,0)" onmouseout="UnTip()"><span ex:content=".label"><span ex:content=".label"></span></a></td> -->
                     <td>
                       <!-- Shows tip if Descrizione exists -->
-                      <a ex:if-exists=".Descrizione" href="javascript:void(0);" ex:onclick-subcontent="Tip('<div class=\'tip\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', HEIGHT, -400,WIDTH, -800,CLICKCLOSE, true, STICKY, true, BGCOLOR,'',BORDERWIDTH,0,FONTSIZE,'12px')" onmouseout="UnTip()"><span ex:content=".label"></span></a>
+                      <a ex:if-exists=".Descrizione" href="javascript:void(0);" ex:onmouseover-subcontent="Tip('<div class=\'tip\'><strong>Descrizione: </strong>{{.Descrizione}}</div>', HEIGHT, -400,WIDTH, -800,OFFSETX, -200,OFFSETY, -50, CLICKSTICKY, true, STICKY, true, BGCOLOR,'',BORDERWIDTH,0,FONTSIZE,'12px')" onmouseout="UnTip()"><span ex:content=".label"></span></a>
                       <!-- only if Descrizione not exists -->
                       <span ex:content="if(exists(.Descrizione), '',  .label)"></span>
                     </td>
@@ -167,12 +169,15 @@
             </div>
           </div> 
 <!-- <img src='http://lorempixel.com/400/200/technics/'> -->
-     
 
      </div>
 
    </div>
-
+  <div class="row clearfix">
+        <div class="col-md-12 column">
+ <img src="./img/infografica_fisco.png">     
+</div>
+</div>
    <hr>
    <footer>
  <p class="text-center" >
