--- a/pace_disarmo_cooperazione.html
+++ b/pace_disarmo_cooperazione.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
 	<meta charset="utf-8">
-	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Pace, disarmo e cooperazione</title>
+	<title>Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente > Cooperazione, pace e disarmo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Controfinanziaria 2016 - Sbilanciamoci! > Come usare la spesa pubblica per i diritti, la pace, l'ambiente">
   <meta name="author" content="Ondata">
