--- a/welfare.html
+++ b/welfare.html
@@ -121,12 +121,20 @@
         <div class="page-header"><h1>
           <span class="fa-stack fa-4x welfare">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-home  fa-stack-1x fa-inverse"></i>
           </span> 
           Welfare e diritti</h1></div><br>
           <p class="lead">Il welfare non è una merce, i diritti non sono un lusso. Tagli indiscriminati alla sanità pubblica, misure frammentarie contro povertà e disuguaglianze, scarsa attenzione alle pari opportunità e all’inclusione delle persone in difficoltà, silenzio assordante sulla tutela dei diritti dei migranti, il razzismo e la xenofobia. Rispetto agli indirizzi del Ddl di Stabilità, Sbilanciamoci! propone un radicale cambio di rotta sul welfare, con un messaggio ben chiaro: un investimento di oltre 7,5 miliardi di euro. Tra le principali misure, lo stanziamento di risorse aggiuntive per il Fondo nazionale politiche sociali, per il Fondo nazionale infanzia e adolescenza e per la definizione dei Livelli essenziali delle prestazioni sociali (nel complesso, oltre 600 milioni di investimenti); l’abolizione dei tagli pari a 2 miliardi al Fondo Sanitario Nazionale previsti rispetto a quanto programmato in precedenza; interventi strutturali per più di 700 milioni per l’inclusione e il diritto a lavoro, alloggio e studio delle persone con disabilità. Inoltre, 1,5 miliardi sulle pari opportunità con l’introduzione di un congedo di paternità obbligatorio di 15 giorni e di un assegno di maternità universale per cinque mesi, entrambi a carico della fiscalità generale. Per le politiche abitative, oltre 2 miliardi e 200 milioni per il recupero di immobili di proprietà pubblica ai fini della residenza sociale e per l’aumento delle risorse al Fondo per la morosità incolpevole e al Fondo sociale per gli affitti: risorse che potrebbero essere in parte recuperate (700 milioni) grazie all’adozione di misure di contrasto al canone d’affitto in nero e alla tassazione degli immobili vuoti. Circa 365 milioni potrebbero arrivare dallo spostamento in regime di esecuzione penale esterna di 10mila detenuti per fatti di pochissima rilevanza. Infine, Sbilanciamoci! chiede la chiusura dei Centri di identificazione ed espulsione (Cie) e dei Centri di accoglienza per richiedenti asilo (Cara) e la destinazione delle risorse ad essi dedicate (500 milioni) per l’abolizione della tassa sul soggiorno, l’ampliamento del Sistema di protezione per richiedenti asilo e rifugiati (Sprar), gli interventi di inclusione dei cittadini stranieri, il sistema nazionale di protezione contro le discriminazioni e il razzismo, l’avvio di un piano di smantellamento dei “campi nomadi”.
           </p>
           </div>
+  <div id="scaricatab">
+                <!-- <span class="fa-stack">
+                <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                <i class="fa fa-balance-scale fa-stack-1x fa-inverse"></i></span></h1> -->
+                <!-- <a href="#"><img src="./img/scarica_sbilanciamoci.png"></a> -->
+                <a href="#" style="text-decoration: none" class="scarica">Scarica la sezione del Rapporto su Welfare e diritti</a>
+            </div>
+
         </div>
 
       </div>    
