--- a/infografica.html
+++ b/infografica.html
@@ -81,31 +81,35 @@
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <div class="container">
-          <ul class="nav navbar-nav">
-           <li >
-            <a href="./">Home</a>
-          </li>
-          <li class="active">
-            <a href="./focus-welfare.html" >Welfare e diritti</a>
-          </li>
-          <!--
-          <li>
-            <a href="./proponi.html">Proponi</a>
-          </li>
-          <li>
-            <a href="./griglia.html">Griglia</a>
-          </li>
-          <li>
-            <a href="./open.html">Open</a>
-          </li>
+        <ul class="nav navbar-nav dropdown">
+                    <li>
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Proposte
+                        <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="./fisco_finanza.html">Fisco e finanza</a></li>
+                                <li><a href="./lavoro_reddito.html">Lavoro e reddito</a></li>
+                                <li><a href="./cultura_conoscenza.html">Cultura e conoscenza</a></li>
+                                <li><a href="./ambiente.html">Ambiente e Sviluppo sostenibile</a></li>
+                                <li><a href="./welfare.html">Welfare e diritti</a></li>
+                                <li><a href="./pace_disarmo_cooperazione.html">Cooperazione, pace, disarmo</a></li>
+                                <li><a href="./altra_economia.html">Altraeconomia</a></li> 
+                            </ul>
+                    <li class="active">
+                        <a href="./infografica.html">Infografica</a>
+<li>
+                        <a href="./analisi_e_dati.html">Analisi e dati</a>
+                    </li>                    </li>
+
+                    </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
          <li>
-          <a href="#" target="_blank">Contromanovra2016 - Sbilanciamoci.org</a>
+          <a href="http://Sbilanciamoci.org" target="_blank">Sbilanciamoci.org </a>
         </li>
-      -->
-    </ul>
+        </ul>
   </div>
 </div>
 
@@ -124,7 +128,7 @@
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
             <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
           </span> 
-          Infografiche
+          Infografica
           </h1>
         </div><br>
           <p class="lead">I <strong>diritti socialis non sono un lusso né una merce</strong>. Per contrastare le scelte di privatizzazione in corso da tempo, Sbilanciamoci! propone di integrare il Fondo Nazionale Politiche Sociali (1,164 miliardi) per riportarlo ai livelli del 2008, impiegare le risorse stanziate per il bonus bebè per ridurre le rette degli asili nido pubblici (costo zero), integrare il Fondo per la non autosufficienza (<mark>350 milioni</mark>) e quello per l’infanzia (<mark>15,2 milioni</mark>), varare misure per l’invecchiamento attivo (1 milione) e per l’inclusione attiva delle persone con disabilità (<mark>50 milioni</mark>). L’inserimento sociale dei detenuti potrebbe avvenire a costo zero. litiche di welfare generali, l’ondata di razzismo che sta travolgendo di nuovo il nostro paese.</p>
@@ -136,8 +140,7 @@
 
       <div class="row clearfix">
         <div class="col-md-12 column">
-        <script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 100%; height: 819px;'><noscript><a href='#'><img alt='La controfinanziaria di SBILANCIAMOCI!: dove trovare 27 miliardi e dove metterli ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey1&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='100%' height='819' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='path' value='views&#47;sankey1&#47;Dashboard1' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey1&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
-        </div>
+<script type='text/javascript' src='https://public.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1144px; height: 819px;'><noscript><a href='#'><img alt='La controfinanziaria di SBILANCIAMOCI!: dove trovare 35 miliardi di Euro e dove metterli ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz' width='1144' height='819' style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='sankey7&#47;SankeyflussiControfinanziaria' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;sa&#47;sankey7&#47;SankeyflussiControfinanziaria&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='showVizHome' value='no' /><param name='showTabs' value='y' /><param name='bootstrapWhenNotified' value='true' /></object></div>
      </div>
 
    </div>
