--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 
     <div id="intro" class="container">
             <br><br>
-            <div class="slogan col-md-12 column centro-verticale">
-		   <img src="./img/sbila_home.png" class="img-responsive center-block" title="Logo Sbilanciamoci" Alt="Logo Sbilanciamoci">	<div class="contenitore">
+            <div class="col-md-3 column">
+		   <img src="./img/sbila_home.png" class="img-responsive center-block" title="Logo Sbilanciamoci" Alt="Logo Sbilanciamoci"></div>	 <div class="col-md-9 column slogan"><div class="contenitore">
             <h1>Rapporto 2016</h1>
             <h3>Come usare la spesa pubblica per i diritti, la pace e l’ambiente</h3>
 			</div>
